--- a/frontend/src/pages/home/Home.css
+++ b/frontend/src/pages/home/Home.css
@@ -1,7 +1,7 @@
 #home_banner{
     height: 500px;
     width: 100%;
-    background-image: url(../../assets/images/home_banner.jpg);
+    background-image: url('../../../public/assets/images/home_banner.jpg');
     background-size: cover;
     background-position: center center;
     display: flex;
